# internshipApp

./: .env  .replit  README.md  backup.sql  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  server.rar  tsconfig.json  vite.config.ts
backup/: dashboard.tsx
client/src/: App.tsx  index.css
client/src/components/application/: application-status-badge.tsx  share-documents-dialog.tsx
client/src/components/common/: dashboard-stats.tsx  header.tsx  sidebar.tsx
client/src/components/dashboard/: activity-timeline.tsx  deadline-card.tsx
client/src/components/document/: share-document-dialog.tsx
client/src/components/document-request/: ReceivedDocumentRequestsList.tsx  create-document-request-dialog.tsx  document-requests-list.tsx  school-document-requests.tsx  shared-documents-list.tsx
client/src/components/internship/: apply-dialog.tsx  internship-card.tsx  internship-filter.tsx  internship-form.tsx
client/src/components/layout/: dashboard-layout.tsx
client/src/components/messaging/: conversation-list.tsx  conversation-view.tsx  messaging-page.tsx
client/src/components/ui/: dashboard-card.tsx  loader.tsx  (+5 more)
client/src/hooks/: use-auth.tsx  use-toast.tsx
client/src/lib/: protected-route.tsx  queryClient.ts
client/src/pages/: auth-page.tsx  company-profile.tsx  home-page.tsx  messaging-page.tsx  profile.tsx
migrations/: 0000_clever_oracle.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: auth.ts  db.ts  index.ts  routes.ts  storage.ts
server/middlewares/: uploadDocs.ts
server/utils/: email.ts
shared/: schema.ts
(+22 files in other folders)
